--- a/BankingApplicationStep-2/pom.xml
+++ b/BankingApplicationStep-2/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>json</artifactId>
             <version>20180813</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
