Updated clean code with exception handling

--- a/BankingApplicationStep-2/pom.xml
+++ b/BankingApplicationStep-2/pom.xml
@@ -93,6 +93,18 @@
             <artifactId>springfox-boot-starter</artifactId>
             <version>3.0.0</version>
         </dependency>
+
+
+        <!--   Jaxb for xml conversion     -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+        </dependency>
+
     </dependencies>
 
 
